<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGrayBg"
    android:fitsSystemWindows="true"
 >
    <include layout="@layout/title_back_text_white"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_notice"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/notice_infromation_linear_bg"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:scaleType="centerInside"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/icon_notice"/>
                <ImageView
                    android:id="@+id/id_notice_red_point"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:visibility="invisible"
                    android:src="@drawable/red_point"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFontBlack"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notice"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_next_gray"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_activity"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/notice_infromation_linear_bg"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:scaleType="centerInside"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/icon_activity"
                    />

                <ImageView
                    android:id="@+id/id_activity_red_point"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:visibility="invisible"
                    android:src="@drawable/red_point"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFontBlack"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/activity"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_next_gray"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_dynamic"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/notice_infromation_linear_bg"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:scaleType="centerInside"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/icon_dynamic"/>
                <ImageView
                    android:id="@+id/id_answer_red_point"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:visibility="invisible"
                    android:src="@drawable/red_point"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFontBlack"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dynamic" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_next_gray"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_news"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/notice_infromation_linear_bg"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:scaleType="centerInside"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/icon_news"/>
                <ImageView
                    android:id="@+id/id_news_red_point"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:visibility="invisible"
                    android:src="@drawable/red_point"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFontBlack"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/news"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_next_gray"/>
            </LinearLayout>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>